<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/historypic"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="cursive"
        android:text="@string/TextViewTwo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/edAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1GH"
        android:layout_width="145dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="19dp"
        android:text="@string/button"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="138dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="81dp"
        android:text="@string/buttonOne"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1GH"
        app:layout_constraintTop_toBottomOf="@+id/edAge" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="serif"
        android:text="@string/TextView"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/edAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="71dp"
        android:background="#99766CCA"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TextView" />

    <TextView
        android:id="@+id/response"
        android:layout_width="361dp"
        android:layout_height="249dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="38dp"
        android:background="#BFFBFBFB"
        android:fontFamily="@font/arvo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1GH" />

</androidx.constraintlayout.widget.ConstraintLayout>